--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,11 @@
             document.getElementById("mySidenav").style.width = "0";
         }
     </script>
+    
+    <!-- Logo Image -->
+    <a href="index.html" class="logo-page">
+      <img src="https://lv2-cdn.azureedge.net/straykids/994e0c371e534b34b580f05a092dd3b5-%EC%9E%90%EC%82%B0%203.png" alt="로고">
+  </a>
 
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
