--- a/schedule.html
+++ b/schedule.html
@@ -29,7 +29,7 @@
     <span class="openbtn" onclick="openNav()">&#9776; open</span>
 
     <!-- Logo Image at the top right of the page -->
-    <a href="Index.html" class="logo-page">
+    <a href="index.html" class="logo-page">
         <img src="https://lv2-cdn.azureedge.net/straykids/994e0c371e534b34b580f05a092dd3b5-%EC%9E%90%EC%82%B0%203.png" alt="로고">
     </a>
 
