--- a/profile_changbin.html
+++ b/profile_changbin.html
@@ -48,7 +48,7 @@
 <h1 class="title">CHANGBIN</h1>
 
 <body>
-    <a href="Profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
+    <a href="profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
     <div class="p-container">
         <div class="p-image">
             <img src="https://lv2-cdn.azureedge.net/straykids/93bab846fcf746599adaedb3b42fc972-3.jpg" alt="Profile Image">
