--- a/profile_han.html
+++ b/profile_han.html
@@ -49,7 +49,7 @@
 <h1 class="title">HAN</h1>
 
 <body>
-    <a href="Profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
+    <a href="profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
     <div class="p-container">
         <div class="p-image">
             <img src="https://lv2-cdn.azureedge.net/straykids/535a13b80f7e43b58d4f8a13f678284d-5.jpg" alt="Profile Image">
