--- a/profile_seungmin.html
+++ b/profile_seungmin.html
@@ -49,7 +49,7 @@
 <h1 class="title">SEUNGMIN</h1>
 
 <body>
-    <a href="Profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
+    <a href="profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
     <div class="p-container">
         <div class="p-image">
             <img src="https://lv2-cdn.azureedge.net/straykids/24f5c577ab6a4ba0b1dd1108b41ccf5d-7.jpg" alt="Profile Image">
