--- a/profile_bangchan.html
+++ b/profile_bangchan.html
@@ -49,7 +49,7 @@
 <h1 class="title">BANGCHAN</h1>
 
 <body>
-    <a href="Profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
+    <a href="profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
     <div class="p-container">
         <div class="p-image">
             <img src="https://lv2-cdn.azureedge.net/straykids/1123cdf8f7314f5b825377f0e78eed8d-1.jpg" alt="Profile Image">
