--- a/profile_hyunjin.html
+++ b/profile_hyunjin.html
@@ -49,7 +49,7 @@
 <h1 class="title">HYUNJIN</h1>
 
 <body>
-    <a href="Profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
+    <a href="profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
     <div class="p-container">
         <div class="p-image">
             <img src="https://lv2-cdn.azureedge.net/straykids/251aa9cb74284601b1804d183c20f9ef-4.jpg" alt="Profile Image">
