--- a/profile_leeknow.html
+++ b/profile_leeknow.html
@@ -49,7 +49,7 @@
 <h1 class="title">LEE KNOW</h1>
 
 <body>
-    <a href="Profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
+    <a href="profiles.html" class="back-button"><i class="fa fa-arrow-left" aria-hidden="true"></i> BACK</a>
     <div class="p-container">
         <div class="p-image">
             <img src="https://lv2-cdn.azureedge.net/straykids/881e28fac6004b65963136ef6ec3ef49-2.jpg" alt="Profile Image">
